<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ctx=".tv.ui.fragments.MyAccountFragment"
    android:background="@drawable/bg_gradient_soft"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signed_in_as"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="10dp"
        android:weightSum="2"
        >

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailTv"
                android:textSize="20sp"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active_plan"
                android:textSize="20sp"
                android:maxLines="1"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expire_date"
                android:textSize="20sp"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:gravity="left">

            <TextView
                android:id="@+id/userNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/userEmailTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/activePlanTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/expireDateTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"/>

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/signout"
        android:background="@drawable/button_focus"
        android:textAllCaps="false"
        android:layout_gravity="center"/>

</LinearLayout>